public/styles/styles.css
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

.border {
  border: 1px solid black;
}

.contact-button{
  background-color: #4768AE;
  border-radius: 3px;
  box-shadow: 0 2px 0 0 #3b5691;
  color: #fff;
  cursor: pointer;
  font-family: 'Roboto Mono', sans-serif;
  font-size: 15px;
  height: 20px;
  letter-spacing: 0.13em;
  margin: 11px 0 0 -15px;
  padding: 23px 34px 19px 34px;
}

.contact-button, .footer-text{
  font-weight: 400;
}

.contact-button:hover{
  background-color: #4e6fb7;
}

.footer{
  border-top: solid 1px #f0f0f0;
  flex-direction: column;
  justify-content: center;
  padding: 95px;
}

.footer, .headerFlex{
  align-items: center;
  display: flex;
}

.footer-text{
  color: #333;
  font-family: 'Montserrat', sans-serif;
  font-size: 32px;
  letter-spacing: 0em;
  margin: 7px 0 100px -15px
}


.headerFlex{
  flex-direction: row;
  justify-content: space-between;
  margin: 0px 115px;
  padding: 3.5% 0 4.5% 0;
}

.headerSocialWidth {
  width: 200px;
}

#navFormat {
  padding: 20px 10px;
}

.openAveLogo {
  margin-left: 10%;
}

.sidenav {
  background-color: white;
  font-family: 'Roboto', sans-serif;
  height: 100%;
  left: 0;
  overflow-x: hidden;
  padding-top: 20%;
  position: fixed;
  top: 0;
  transition: 0.5s;
  width: 0;
  z-index: 1;
}

.sidenav a {
  color:black;
  display: block;
  font-size: 25px;
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  transition: 0.3s;
}

.sidenav a:hover {
  color: grey;
}

.sidenav .closebtn {
  font-size: 40px;
  margin-left: 50px;
  position: right;
  right: 25px;
  top: 0;
}

.socialMedia {
  height: 30px;
  padding: 5px;
  width: 30px;
}

.verticalSeparator {
  border-left: 1px solid #f0f0f0;
  height: 30px;
  margin-left: 20px;
  position: absolute;
  padding-left: 20px;
}

.titleBox {
  background-color: rgb(160, 177, 214);
  text-align: center;
  margin: 2% 9%;
  padding: 25px 300px;
  font-size: 40px;
  line-height: 5rem;
}

.betweenTitleAndForm {
  text-align: center;
  margin: 1% 9%;
  padding: 5px 300px;
  font-size: 32px;
  line-height: 3rem;
}

.bold {
  font-weight: 700;
}

.buttonsForForm {
  margin-right: 9%;
  margin-bottom: 3%;
  overflow: auto;
}

.formButton {
  margin-left: 1%;
  float: right;
  padding: 5px 10px;
  border-radius: 10px;
  font-size: 14px;
  width: 100px;
  background-color: #4e6fb7;
  color: white;
  font-weight: 400;
}

.informationForm {
  background-color: #ffffff;
  margin: auto;
  padding: 40px;
  margin: 3% 9% 1% 9%;
  min-width: 300px;
  border: 1px solid black;
  border-radius: 10px;
  text-align: center;
}

.informationForm * {
  box-sizing: border-box;
}

.formField {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  
}
input {
  padding: 10px;
  font-size: 17px;
  border: 1px solid #aaaaaa;
}

label {
  text-align: right;
  padding: 5px;
  font-size: 17px;
}

.formStretch {
  padding-right: 25px;
  width: 45%;
}

.formCircles {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 30px;
}

.step {
  height: 10px;
  width: 10px;
  background-color: #bbbbbb;
  border: 1px solid black;
  border-radius: 50%;
  display: inline-block;
  opacity: 0.5;
}

.step.active {
  opacity: 1;
}

.step.finish {
  background-color: #4CAF50;
}

